fix kez alignment

--- a/assets/styles/minimap-sprites.css
+++ b/assets/styles/minimap-sprites.css
@@ -51,7 +51,7 @@
 .jakiro              .herolist__hero__link:before { background-position: -299px -131px }
 .juggernaut          .herolist__hero__link:before { background-position: -341px -131px }
 .keeper_of_the_light .herolist__hero__link:before { background-position: -383px -131px }
-.kez                 .herolist__hero__link:before { background-position: -173px -467px }
+.kez                 .herolist__hero__link:before { background-position: -174px -468px }
 .kunkka              .herolist__hero__link:before { background-position: -6px -173px   }
 .legion_commander    .herolist__hero__link:before { background-position: -47px -173px  }
 .leshrac             .herolist__hero__link:before { background-position: -89px -173px  }
